fix/plural endpoints
